# heraclitus

./: .editorconfig  Cargo.toml  README.md  notes.md
crates/heracli/: Cargo.toml
crates/heracli/src/: main.rs
crates/heraclitus-core/: Cargo.toml  lib.rs
crates/heraclitus-core/src/: lib.rs
crates/heraclitus-core/src/datatype/: macros.rs  mod.rs
crates/heraclitus-core/src/repo/: mod.rs
crates/heraclitus-core/src/store/: mod.rs
crates/heraclitus-core/src/store/debug_filesystem/: datatype.rs  mod.rs
crates/heraclitus-core/src/store/postgres/: datatype.rs  mod.rs
crates/heraclitus-core/src/store/postgres/sql/: datatype_0001.up.sql
crates/heraclitus-core/tests/: datatype.rs  interface.rs
crates/heraclitus-macros/: Cargo.toml
crates/heraclitus-macros/src/: lib.rs
src/: bin.rs  lib.rs  util.rs
src/datatype/: artifact_graph.rs  artifact_graph_0001.up.sql  blob.rs  interface.rs  macros.rs  mod.rs  partitioning.rs  producer.rs  reference.rs  tracking_branch_producer.rs
src/datatype/artifact_graph/: mod.rs  production.rs  testing.rs  tests.rs
src/datatype/sql/: artifact_graph_0001.down.sql  artifact_graph_0001.up.sql  blob_0001.down.sql  blob_0001.up.sql
src/repo/: datatype_0001.up.sql  mod.rs
src/store/: mod.rs
src/store/debug_filesystem/: mod.rs
src/store/debug_filesystem/datatype/: artifact_graph.rs  mod.rs  reference.rs
src/store/postgres/: mod.rs
src/store/postgres/datatype/: artifact_graph.rs  blob.rs  mod.rs  partitioning.rs  producer.rs  reference.rs  tracking_branch_producer.rs
src/store/postgres/datatype/sql/: arbitrary_partitioning_0001.down.sql  arbitrary_partitioning_0001.up.sql  artifact_graph_0001.down.sql  artifact_graph_0001.up.sql  ref_0001.down.sql  ref_0001.up.sql
src/store/postgres/sql/: datatype_0001.down.sql
