[package]
name = "heraclitus"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
description = "A system for managing versioned, dependent data artifacts."
readme = "README.md"
edition = "2018"

[lib]
name = "heraclitus"
path = "src/lib.rs"

[[bin]]
name = "hera"
path = "src/bin.rs"

[workspace]
members = [
	"crates/heraclitus-core",
	"crates/heraclitus-macros",
]

[dependencies]
heraclitus-core = { path = "crates/heraclitus-core" }
heraclitus-macros = { path = "crates/heraclitus-macros" }
maplit = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[patch.crates-io]
schemer = { path = "../schemer/schemer" }
