[package]
name = "heraclitus"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
description = "A system for managing versioned, dependent data artifacts."
readme = "README.md"
edition = "2018"

[lib]
name = "heraclitus"
path = "src/lib.rs"

[workspace]
members = [
  "crates/heraclitus-core",
  "crates/heraclitus-macros",
  "crates/heracli",
]

[features]
default = ["backend-postgres", "backend-debug-filesystem"]  # At least one backend must be enabled to compile.
backend-debug-filesystem = [
  "heraclitus-core/backend-debug-filesystem",
  "heraclitus-macros/backend-debug-filesystem",
  "walkdir",
]
backend-postgres = ["heraclitus-core/backend-postgres", "heraclitus-macros/backend-postgres"]

[dependencies]
# Enumset does not reexport well, so must depend on it in both core and heraclitus.
enumset = { version = "0.4", features = ["serde"] }
heraclitus-core = { path = "crates/heraclitus-core" }
heraclitus-macros = { path = "crates/heraclitus-macros" }
maplit = "*"
# Serde does not reexport well, so must depend on it in both core and heraclitus.
serde = "*"
serde_derive = "*"
serde_json = "*"

walkdir = { version = "2", optional = true }

[patch.crates-io]
schemer = { path = "../schemer/schemer" }
