[package]
name = "heraclitus-core"
version = "0.1.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
edition = "2018"

[lib]
name = "heraclitus_core"
path = "src/lib.rs"

[features]
backend-debug-filesystem = [
  "heraclitus-macros/backend-debug-filesystem",
  "serde_json",
]
backend-postgres = [
	"heraclitus-macros/backend-postgres",
	"postgres",
	"postgres-derive",
	"postgres_array",
	"schemer",
	"schemer-postgres",
]

[dependencies]
heraclitus-macros = { path = "../heraclitus-macros" }
daggy = {version = "0.6", features = ["serde-1"]}
enumset = { version = "0.4", features = ["serde"] }
failure = "0.1"
lazy_static = "*"
petgraph = { version = "0.4.13", features = ["serde-1"] }
rand = "0.7"
serde = "*"
serde_derive = "*"
url = "*"
uuid = { version = "0.5", features = ["use_std", "v4", "v5", "serde"] }

serde_json = { version = "*", optional = true }

postgres = { version = "0.15", features = ["with-uuid"], optional = true }
postgres_array = { version = "0.9", optional = true }
postgres-derive = { version = "0.3", optional = true }
schemer = { version = "0.1.2", optional = true }
schemer-postgres = { version = "0.1.1", optional = true }
