[package]
name = "heraclitus-macros"
version = "0.1.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[features]
backend-debug-filesystem = []
backend-postgres = []

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
